--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.0.0",
+    "@angular/cdk": "^19.0.0",
     "@angular/common": "^19.0.0",
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.0",
     "@angular/forms": "^19.0.0",
-    "@angular/material": "^19.0.2",
+    "@angular/material": "^19.0.0",
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
@@ -23,8 +24,10 @@
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.7",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "ng2-charts": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
